overflow index fix

--- a/style.scss
+++ b/style.scss
@@ -199,16 +199,6 @@ a:active {
     border-width: 0px;
 }
 
-.separator {
-    border-color: #75537d;
-    display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: inset;
-    border-width: 0px;
-}
 
 #C1 {
     border-color: #75537d;
